language/move-lang/tests/move_check/typing/bind_unpack_references_invalid.exp
error: 

   ┌── tests/move_check/typing/bind_unpack_references_invalid.move:6:25 ───
   │
 6 │         let R { s1: S { f }, s2 } = &R { s1: S{f: 0}, s2: S{f: 1} };
   │                         - Is not compatible with: '&u64'
 7 │         f = 0;
   │         - The type: integer
   │         ^ Invalid assignment to local 'f'
   │

error: 

   ┌── tests/move_check/typing/bind_unpack_references_invalid.move:6:30 ───
   │
 6 │         let R { s1: S { f }, s2 } = &R { s1: S{f: 0}, s2: S{f: 1} };
   │                              -- Is not compatible with: '&0x8675309::M::S'
 7 │         f = 0;
 8 │         s2 = S { f: 0 }
   │         ^^ Invalid assignment to local 's2'
   │              ---------- The type: '0x8675309::M::S'
   │

error: 

    ┌── tests/move_check/typing/bind_unpack_references_invalid.move:12:25 ───
    │
 12 │         let R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} };
    │                         - Is not compatible with: '&mut u64'
 13 │         f = 0;
    │         - The type: integer
    │         ^ Invalid assignment to local 'f'
    │

error: 

    ┌── tests/move_check/typing/bind_unpack_references_invalid.move:12:30 ───
    │
 12 │         let R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} };
    │                              -- Is not compatible with: '&mut 0x8675309::M::S'
 13 │         f = 0;
 14 │         s2 = S { f: 0 }
    │         ^^ Invalid assignment to local 's2'
    │              ---------- The type: '0x8675309::M::S'
    │

error: 

    ┌── tests/move_check/typing/bind_unpack_references_invalid.move:19:25 ───
    │
 19 │         let R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} };
    │                         - Is not a subtype of: '&mut u64'
 20 │         f = &0;
    │         ^ Invalid assignment to local 'f'
    │             -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/bind_unpack_references_invalid.move:19:30 ───
    │
 19 │         let R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} };
    │                              -- Is not a subtype of: '&mut 0x8675309::M::S'
 20 │         f = &0;
 21 │         s2 = &S { f: 0 }
    │         ^^ Invalid assignment to local 's2'
    │              ----------- The type: '&0x8675309::M::S'
    │

